--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <ul>
+    <li><%= link_to "Home", welcome_home_path, class: "btn btn-success" %></li>
+    <li><%= link_to "About", welcome_about_path, class: "btn btn-success" %></li>
+  </ul>
 
 <%= yield %>
 
