--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,17 +2,19 @@
 <html>
 <head>
   <title>SwimClub</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <ul>
-    <li><%= link_to "Home", welcome_home_path, class: "btn btn-success" %></li>
-    <li><%= link_to "About", welcome_about_path, class: "btn btn-success" %></li>
-  </ul>
+  <div class="container">
+    <ul class="nav nav-tabs">
+      <li><%= link_to "Home", welcome_home_path, class: "btn btn-success" %></li>
+      <li><%= link_to "About", welcome_about_path, class: "btn btn-success" %></li>
+    </ul>
 
-<%= yield %>
-
+    <%= yield %>
+  </div>
 </body>
 </html>
