--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,2 @@
 <h1>About the Sun City Festival Swimmer's Club</h1>
-<p>This is a work-in-progress default About/Information Page</p>
+<p class="about-title">This is a work-in-progress default About/Information Page</p>
