--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,2 +1,2 @@
-<h1>Sun City Festival Swimmer's Club</h1>
+<h1 class="home-title">Sun City Festival Swimmer's Club</h1>
 <p>This is a work-on-progress default Home Page</p>
