Completed Basic Nav Bar, routes, and views to static pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
     <ul class="nav nav-tabs">
       <li><%= link_to "Home", welcome_home_path, class: "btn btn-success" %></li>
       <li><%= link_to "About", welcome_about_path, class: "btn btn-success" %></li>
+      <li><%= link_to "Upcoming Events", welcome_upcoming_events_path, class: "btn btn-success" %></li>
+      <li><%= link_to "Contacts", welcome_contacts_path, class: "btn btn-success" %></li>
+      <li><%= link_to "Photos", welcome_photo_gallery_path, class: "btn btn-success" %></li>
+      <li><%= link_to "Videos", welcome_video_gallery_path, class: "btn btn-success" %></li>
     </ul>
 
     <%= yield %>
