--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,21 +4,25 @@
   <title>SwimClub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+<img src="/images/FS_FullColor.jpg" alt="Swim Club Logo" />
 <body>
   <div class="container">
-    <ul class="nav nav-tabs">
-      <li><%= link_to "Home", welcome_home_path, class: "btn btn-success" %></li>
-      <li><%= link_to "About", welcome_about_path, class: "btn btn-success" %></li>
-      <li><%= link_to "Upcoming Events", welcome_upcoming_events_path, class: "btn btn-success" %></li>
-      <li><%= link_to "Contacts", welcome_contacts_path, class: "btn btn-success" %></li>
-      <li><%= link_to "Photos", welcome_photo_gallery_path, class: "btn btn-success" %></li>
-      <li><%= link_to "Videos", welcome_video_gallery_path, class: "btn btn-success" %></li>
-    </ul>
-
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <ul class="nav nav-tabs">
+          <li><%= link_to "Home", welcome_home_path, class: "btn btn-success" %></li>
+          <li><%= link_to "About", welcome_about_path, class: "btn btn-success" %></li>
+          <li><%= link_to "Upcoming Events", welcome_upcoming_events_path, class: "btn btn-success" %></li>
+          <li><%= link_to "Contacts", welcome_contacts_path, class: "btn btn-success" %></li>
+          <li><%= link_to "Photos", welcome_photo_gallery_path, class: "btn btn-success" %></li>
+          <li><%= link_to "Videos", welcome_video_gallery_path, class: "btn btn-success" %></li>
+        </ul>
+      </div>
+    </nav>
     <%= yield %>
   </div>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 </body>
 </html>
