Incorporated Home Page Text Information

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,3 +1,54 @@
 <img src="/images/FS_FullColor.jpg" alt="Swim Club Logo" />
 <h1 class="home-title">Sun City Festival Swimmer's Club</h1>
 <p>This is a work-on-progress default Home Page</p>
+<div>
+<h2>What you need to know about the Festival Swimmers Club.</h2>
+
+<p>The club is open to all Association members in good standing and are able to swim 100 yards
+  (4 lengths of the pool). The primary focus of the club is to provide structured group swimming workouts for those
+  wanting to improve their fitness through swimming and / or want to join in competition.
+  Work outs are designed under the guidance of United States Master Swimming (USMS) certified coaches.</p>
+
+<p>Residents who cannot swim or cannot swim sufficiently to participate in the structured swim workouts will be
+  recommended to obtain more swimming instruction and try again.
+  Basic swimming instruction will be obtained outside of the scope of the club and will be the responsibility of the resident
+  to eventually be able to swim the 100 yards in order to participate in the club’s structured workouts.<p>
+
+<p>All members are required to submit a Club Membership application and pay dues and sign a liability waiver.
+This waiver allows USMS coaches to provide you with individual instruction for 30 days as part of your club dues of the structured swim workout.
+After that time members who would like to continue to receive coaching must join the USMS Association.
+All club members may participate in the structured swim workouts regardless of affiliation in the USMS.</p>
+</div>
+​
+<div>
+<h2>Work-out schedule:</h2>
+
+
+<p>TUESDAY AND THURSDAY</p>
+
+<p>PICK EITHER 9-10 OR 10-11 AM</p>
+​
+​<p>Nov. thru April 9-11 am</p>
+<p>May thru Oct. 7-9 am</p>
+</div>
+
+<div>
+​<h2>WHAT is US Masters Swimming (USMS)</h2>
+
+<p>Masters Swimming is an organized program of swimming for adults.
+U.S. Masters Swimming, founded in 1970, is a nonprofit membership national governing body.
+It provides membership benefits to nearly 60,000 Masters Swimmers across the country. Some of these benefits include:</p>
+<ul>
+<li>Insurance</li>
+<li>Swimmer Magazine</li>
+<li>Sanctioned Events</li>
+</ul>
+<p>USMS and its 52 Local Masters Swimming Committees (LMSCs) provide direct support to more than 1,500 Masters Swimming clubs and workout groups.
+  Structure and organization of USMS programs vary and are driven by factors such as pool availability,
+  instructor or coach availability, community support, and finances.
+  The majority of locations offering Masters Swimming programs have coaches on deck.
+  Coaches write workouts and provide feedback and instruction.</p>
+
+<p>For more information check out their web site: www.usms.org</p>
+
+</div>
