--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <ul class="nav nav-tabs">
+    <ul class="nav nav-tabs nav-justified navbar-fixed-top">
       <li><%= link_to "Home", welcome_home_path, class: "btn btn-success" %></li>
       <li><%= link_to "About", welcome_about_path, class: "btn btn-success" %></li>
       <li><%= link_to "Upcoming Events", welcome_upcoming_events_path, class: "btn btn-success" %></li>
