Centered home page pic

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,4 @@
-<img src="/images/FS_FullColor.jpg" alt="Swim Club Logo" />
+<img src="/images/FS_FullColor.jpg" alt="Swim Club Logo" class="img-responsive center-block" />
 <h1 class="home-title">Sun City Festival Swimmer's Club</h1>
 <p>This is a work-on-progress default Home Page</p>
 <div>
