--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,20 @@
 <h1>About the Sun City Festival Swimmer's Club</h1>
 <p class="about-title">This is a work-in-progress default About/Information Page</p>
+<div>
+<h2>What you need to know about the Festival Swimmers Club.</h2>
+
+<p>The club is open to all Association members in good standing and are able to swim 100 yards
+  (4 lengths of the pool). The primary focus of the club is to provide structured group swimming workouts for those
+  wanting to improve their fitness through swimming and / or want to join in competition.
+  Work outs are designed under the guidance of United States Master Swimming (USMS) certified coaches.</p>
+
+<p>Residents who cannot swim or cannot swim sufficiently to participate in the structured swim workouts will be
+  recommended to obtain more swimming instruction and try again.
+  Basic swimming instruction will be obtained outside of the scope of the club and will be the responsibility of the resident
+  to eventually be able to swim the 100 yards in order to participate in the club’s structured workouts.<p>
+
+<p>All members are required to submit a Club Membership application and pay dues and sign a liability waiver.
+This waiver allows USMS coaches to provide you with individual instruction for 30 days as part of your club dues of the structured swim workout.
+After that time members who would like to continue to receive coaching must join the USMS Association.
+All club members may participate in the structured swim workouts regardless of affiliation in the USMS.</p>
+</div>
