Text spacing fixed on home page

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -3,16 +3,12 @@
 <p>This is a work-on-progress default Home Page</p>
 
 <h2>Work-out schedule:</h2>
-
-
+<div>
 <p>TUESDAY AND THURSDAY</p>
-
 <p>PICK EITHER 9-10 OR 10-11 AM</p>
-​
-​<p>Nov. thru April 9-11 am</p>
+<p>Nov. thru April 9-11 am</p>
 <p>May thru Oct. 7-9 am</p>
-
-
+</div>
 <div>
 ​<h2>WHAT is US Masters Swimming (USMS)</h2>
 
