--- a/app/views/welcome/contacts.html.erb
+++ b/app/views/welcome/contacts.html.erb
@@ -1,2 +1,8 @@
 <h1> Contacts </h1>
 <p> Here will be a list of contact numbers for admin members of the club </p>
+
+<ul>
+  <% Page.all.each do |page| %>
+    <li><%= page.title %></li>
+  <% end %>
+</ul>
