--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <li><%= link_to "Contacts", welcome_contacts_path, class: "btn btn-success" %></li>
       <li><%= link_to "Photos", welcome_photo_gallery_path, class: "btn btn-success" %></li>
       <li><%= link_to "Videos", welcome_video_gallery_path, class: "btn btn-success" %></li>
+      <li><%= link_to "Pages", pages_path, class: "btn btn-success" %></li>
     </ul>
 
     <%= yield %>
