--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -3,6 +3,7 @@
 <div class="row">
   <div class="col-md-8">
     <p><%= @page.body.html_safe %></p>
+    <%= link_to "Edit Page", edit_page_path(@page), class: 'btn btn-success' %> 
     <%= link_to "Delete Page", @page, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this page?'} %>
   </div>
 </div>
