--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,7 +3,7 @@
 <%= link_to "New Page", new_page_path, class: 'btn btn-success' %>
 
 <ul>
-  <% Page.all.each do |page| %>
+  <% @pages.each do |page| %>
     <li><%= link_to page.title, page %></li>
   <% end %>
 </ul>
