--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <p class="alert"><%= alert %>
+  <p class="alert"><%= alert %></p>
   <div class="container">
     <ul class="nav nav-tabs nav-justified navbar-fixed-top">
       <% Page.all.each do |page| %>
