--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
   <p class="alert"><%= alert %></p>
   <div class="container">
-    <ul class="nav nav-tabs navbar-fixed-top">
+    <ul class="nav nav-pills navbar-fixed-top">
       <% Page.all.each do |page| %>
         <li><%= link_to page.menu_title, page, class: "btn navbar-btn" %></li>
       <% end %>
