--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @page.title.html_safe %></h1>
 
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-md-8 page-body">
     <p><%= @page.body.html_safe %></p>
   </div>
 </div>
